--- a/package.json
+++ b/package.json
@@ -17,10 +17,15 @@
     "eslint": "8.54.0",
     "eslint-config-next": "14.0.3",
     "next": "14.0.3",
+    "next-auth": "^4.24.5",
     "postcss": "8.4.31",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "swiper": "^11.0.5",
     "tailwindcss": "3.3.5",
     "typescript": "5.3.2"
+  },
+  "devDependencies": {
+    "prisma": "^5.6.0"
   }
 }
