--- a/package.json
+++ b/package.json
@@ -8,12 +8,17 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "prisma": {
+    "seed": "ts-node --compiler-options {\"module\":\"commonJS\"} prisma/seed.ts"
+  },
   "dependencies": {
+    "@prisma/client": "^5.6.0",
     "@types/node": "20.9.4",
     "@types/react": "18.2.38",
     "@types/react-dom": "18.2.17",
     "@vercel/postgres": "^0.5.1",
     "autoprefixer": "10.4.16",
+    "bcrypt": "^5.1.1",
     "eslint": "8.54.0",
     "eslint-config-next": "14.0.3",
     "next": "14.0.3",
@@ -26,6 +31,8 @@
     "typescript": "5.3.2"
   },
   "devDependencies": {
-    "prisma": "^5.6.0"
+    "@types/bcrypt": "^5.0.2",
+    "prisma": "^5.6.0",
+    "ts-node": "^10.9.1"
   }
 }
